// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSumary with 0 expenses  1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div>
      <h1
        className="page-header__title"
      >
         Viewing 
        <span>
          0
        </span>
         
        expenses
         totaling 
        <span>
          $0.00
           
        </span>
      </h1>
      <div
        className="page-header__actions"
      >
        <Link
          className="button-layout"
          replace={false}
          to="create"
        >
          Add Expense 
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render ExpensesSumary with one expense  1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div>
      <h1
        className="page-header__title"
      >
         Viewing 
        <span />
         
        expenses
         totaling 
        <span>
          $1.50
           
        </span>
      </h1>
      <div
        className="page-header__actions"
      >
        <Link
          className="button-layout"
          replace={false}
          to="create"
        >
          Add Expense 
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render ExpensesSumary with some expenses  1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div>
      <h1
        className="page-header__title"
      >
         Viewing 
        <span>
          4
        </span>
         
        expenses
         totaling 
        <span>
          $17.80
           
        </span>
      </h1>
      <div
        className="page-header__actions"
      >
        <Link
          className="button-layout"
          replace={false}
          to="create"
        >
          Add Expense 
        </Link>
      </div>
    </div>
  </div>
</div>
`;
